--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@ category: "blog"
 ---
 
 {% for post in paginator.posts %}
-<h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+<h1><a href="/peng/{{ post.url }}">{{ post.title }}</a></h1>
 <p class="author">
     <span class="date">{{ post.date }}</span>
 </p>
 {% endfor %}
+
+
+<div class="pagination">
+    {% if paginator.previous_page %}
+    <a href="/peng/blog/page{{ paginator.previous_page }}" class="previous">Previous</a>
+    {% else %}
+    <span class="previous">Previous</span>
+    {% endif %}
+
+    <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+    {% if paginator.next_page %}
+    <a href="/peng/blog/page{{ paginator.next_page }}" class="next">Next</a>
+    {% else %}
+    <span class="next ">Next</span>
+    {% endif %}
+
+
+    {% for page in (1..paginator.total_pages) %}
+    {% if page == paginator.page %}
+    <li class="current"><a href="/peng/">{{ page }}sasasa</a></li>
+    {% else %}
+    <li><a href="/peng/blog/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a></li>
+    {% endif %}
+    {% endfor %}
+</div>
