--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@ category: "blog"
     <span class="date">{{ post.date }}</span>
 </p>
 {% endfor %}
-
-
 <div class="pagination">
     {% if paginator.previous_page %}
-    <a href="/peng/blog/page{{ paginator.previous_page }}" class="previous">Previous</a>
+    <a href="/peng/blog/page{{ paginator.previous_page }}/" class="previous">Previous</a>
     {% else %}
     <span class="previous">Previous</span>
     {% endif %}
 
     <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
     {% if paginator.next_page %}
-    <a href="/peng/blog/page{{ paginator.next_page }}" class="next">Next</a>
+    <a href="/peng/blog/page{{ paginator.next_page }}/" class="next">Next</a>
     {% else %}
     <span class="next ">Next</span>
     {% endif %}
