--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 ---
-layout: Index
-category: "blog"
+layout: index
+category: blog
 ---
 
+<style>
+	.demo-card-wide.mdl-card {
+	  /*width: 512px;*/
+	  width:100%;
+	  margin-top: 10px;
+	}
+	.demo-card-wide > .mdl-card__title {
+	  color: #fff;
+	  /*height: 176px;*/
+	  height:200px;
+	  /*background: url('/peng/resource/images/test01.jpg') center / cover;*/
+	}
+	.demo-card-wide > .mdl-card__menu {
+	  color: #fff;
+	}
+</style>
+<!-- 遍历分页后的文章 -->
 {% for post in paginator.posts %}
-    <div class="article_info">
+    <!-- <div class="article_info">
         <b><a class="article_title" href="/peng/{{ post.url }}">{{ post.title }}</a></b>
         <p>author: {{ post.author }}</p>
         <span class="article_date">{{ post.date }}</span>
@@ -12,30 +29,65 @@ category: "blog"
             <img src="{{post.illustration}}" alt="图片">
         </div>
         <p class="article_description">{{ post.description }}</p>
-    </div>
+    </div> -->
+	<div class="mdl-grid">
+		<div class="mdl-cell mdl-cell--3-col"></div>
+
+		<div class="mdl-cell mdl-cell--6-col">
+		    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title" style="background: url('{{post.illustration}}') center / cover;">
+			  	<!-- <img src="{{post.illustration}}" style="width:100%;height:100%;"> -->
+			    <h2 class="mdl-card__title-text"><a href="">{{ post.title }}</a></h2>
+			  </div>
+			  <div class="mdl-card__supporting-text">
+			    {{ post.description }}
+			  </div>
+			  <div class="mdl-card__actions mdl-card--border">
+			    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/peng/{{ post.url }}">
+			      阅读全文
+			    </a>
+			  </div>
+			  <div class="mdl-card__menu">
+			    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+			      <i class="material-icons">share</i>
+			    </button>
+			  </div>
+			</div>
+		</div>
+
+		<div class="mdl-cell mdl-cell--3-col"></div>
+	</div>
 {% endfor %}
 
-<div class="pagination">
-    <!--{% if paginator.previous_page %}-->
-    <!--<a href="/peng/blog/page{{ paginator.previous_page }}/" class="previous">Previous</a>-->
-    <!--{% else %}-->
-    <!--<span class="previous">Previous</span>-->
-    <!--{% endif %}-->
+<div class="mdl-grid">
+	<div class="mdl-cell mdl-cell--3-col"></div>
 
-    <!--<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>-->
-    <!--{% if paginator.next_page %}-->
-    <!--<a href="/peng/blog/page{{ paginator.next_page }}/" class="next">Next</a>-->
-    <!--{% else %}-->
-    <!--<span class="next ">Next</span>-->
-    <!--{% endif %}-->
+	<div class="mdl-cell mdl-cell--6-col">
+		<div class="pagination">
+		    <!--{% if paginator.previous_page %}-->
+		    <!--<a href="/peng/blog/page{{ paginator.previous_page }}/" class="previous">Previous</a>-->
+		    <!--{% else %}-->
+		    <!--<span class="previous">Previous</span>-->
+		    <!--{% endif %}-->
 
-    <ul>
-        {% for page in (1..paginator.total_pages) %}
-        {% if page == paginator.page %}
-        <li class="current"><a href="#">{{ page }}</a></li>
-        {% else %}
-        <li><a href="/peng/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a></li>
-        {% endif %}
-        {% endfor %}
-    </ul>
+		    <!--<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>-->
+		    <!--{% if paginator.next_page %}-->
+		    <!--<a href="/peng/blog/page{{ paginator.next_page }}/" class="next">Next</a>-->
+		    <!--{% else %}-->
+		    <!--<span class="next ">Next</span>-->
+		    <!--{% endif %}-->
+
+		    <ul>
+		        {% for page in (1..paginator.total_pages) %}
+		        {% if page == paginator.page %}
+		        <li class="current"><a href="#">{{ page }}</a></li>
+		        {% else %}
+		        <li><a href="/peng/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a></li>
+		        {% endif %}
+		        {% endfor %}
+		    </ul>
+		</div>
+	</div>
+
+	<div class="mdl-cell mdl-cell--3-col"></div>
 </div>
