--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 ---
-layout: index
+layout: Index
 category: blog
 ---
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<style type="text/css">
+	body{
+		background: #e8e8e8;
+	}
+	a{
+		text-decoration: none;
+		/*color: white;*/
+	}
+</style>
+<style>
+	.demo-card-wide.mdl-card {
+	  /*width: 512px;*/
+	  width:100%;
+	  margin-top: 10px;
+	}
+	.demo-card-wide > .mdl-card__title {
+	  color: #fff;
+	  /*height: 176px;*/
+	  height:200px;
+	  /*background: url('/peng/resource/images/test01.jpg') center / cover;*/
+	}
+	.demo-card-wide > .mdl-card__menu {
+	  color: #fff;
+	}
+</style>
 
 <!-- 遍历分页后的文章 -->
 {% for post in paginator.posts %}
