--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 layout: Index
 category: blog
 ---
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<style type="text/css">
+<!-- <style type="text/css">
 	body{
 		background: #e8e8e8;
 	}
@@ -29,7 +26,7 @@ category: blog
 	.demo-card-wide > .mdl-card__menu {
 	  color: #fff;
 	}
-</style>
+</style> -->
 
 <!-- 遍历分页后的文章 -->
 {% for post in paginator.posts %}
