--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ category: blog
         <p class="article_description">{{ post.description }}</p>
     </div> -->
 	<div class="mdl-grid">
-		<div class="mdl-cell mdl-cell--3-col"></div>
+		<div class="mdl-cell mdl-cell--2-col"></div>
 
-		<div class="mdl-cell mdl-cell--6-col">
+		<div class="mdl-cell mdl-cell--8-col">
 		    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title" style="background: url('{{post.illustration}}') center / cover;">
+			  <div class="mdl-card__title" style="background: url('{{post.illustration}}') center / cover;height:300px;">
 			    <h2 class="mdl-card__title-text"><a href="">{{ post.title }}</a></h2>
 			  </div>
 			  <div class="mdl-card__supporting-text">
@@ -46,7 +46,7 @@ category: blog
 			</div>
 		</div>
 
-		<div class="mdl-cell mdl-cell--3-col"></div>
+		<div class="mdl-cell mdl-cell--2-col"></div>
 	</div>
 {% endfor %}
 
