--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ category: blog
 		<div class="mdl-cell mdl-cell--8-col">
 		    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
 			  <div class="mdl-card__title" style="background: url('{{post.illustration}}') center / cover;height:300px;">
-			    <h2 class="mdl-card__title-text"><a href="">{{ post.title }}</a></h2>
+			    <h2 class="mdl-card__title-text"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>
 			  </div>
 			  <div class="mdl-card__supporting-text">
 			    {{ post.description }}
