--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ category: blog
 	<article class="article">
 		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="/peng/{{ post.url }}"></a>
 		<div class="article-content">
-			<h2 class="article-title"><a href="/peng/{{ post.url }}">Hello,你好!{{ post.title }}</a></h2>
+			<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.description }}</p>
 			<span>2017, Sep 12&nbsp;&nbsp;&nbsp;—&nbsp;</span>
 			<span>3 minute read</span>
