--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ category: blog
         <!--<p class="article_description">{{ post.description }}</p>-->
     <!--</div>-->
 	<article class="article">
-		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="/peng/{{ post.url }}"></a>
+		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="{{ post.url }}"></a>
 		<div class="article-content">
-			<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>
+			<h2 class="article-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.description }}</p>
 			<span>2017, Sep 12&nbsp;&nbsp;&nbsp;—&nbsp;</span>
 			<span>3 minute read</span>
@@ -74,7 +74,7 @@ category: blog
 	</div>
 	{% else %}
 	<div class="pageNum">
-		<a href="/peng/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a>
+		<a href="/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a>
 	</div>
 	{% endif %}
 	{% endfor %}
