--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@ category: blog
         <!--<p class="article_description">{{ post.description }}</p>-->
     <!--</div>-->
 	<article class="article">
-		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="/peng/{{ post.url }}"></a>
+		<!--<a class="article-img" style="background-image: url('{{post.illustration}}')" href="/peng/{{ post.url }}"></a>-->
+		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="{{ post.url }}"></a>
 		<div class="article-content">
-			<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>
+			<!--<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>-->
+			<h2 class="article-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.description }}</p>
 			<span>2017, Sep 12&nbsp;&nbsp;&nbsp;—&nbsp;</span>
 			<span>3 minute read</span>
