--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ category: blog
 	</div>
 	{% else %}
 	<div class="pageNum">
-		<a href="/peng/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a>
+		<a href="/{%if page > 1 %}blog/page{{ page }}/{% endif %}">{{ page }}</a>
 	</div>
 	{% endif %}
 	{% endfor %}
