--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ category: blog
 			<!--<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>-->
 			<h2 class="article-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 			<p>{{ post.description }}</p>
-			<span>2017, Sep 12&nbsp;&nbsp;&nbsp;—&nbsp;</span>
+			<span>{{ post.date }}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
 			<span>3 minute read</span>
 		</div>
 	</article>
