--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ category: blog
 		<a class="article-img" style="background-image: url('{{post.illustration}}')" href="{{ post.url }}"></a>
 		<div class="article-content">
 			<!--<h2 class="article-title"><a href="/peng/{{ post.url }}">{{ post.title }}</a></h2>-->
-			<h2 class="article-title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+			<div class="article-title">
+				<a href="{{ post.url }}">{{ post.title }}</a>
+				<span class="article-source">{{ post.source }}</span>
+				<span class="article-source">{{ post.type }}</span>
+			</div>
 			<p>{{ post.description }}</p>
 			<span><!--{{ post.date }}-->{{ post.date| date: "%Y, %B %d" }}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
 			<span>3 minute read</span>
